# horcrux

./: .gitignore  README.md  feature.py  ohlcv.py  pyproject.toml  setup.py
src/horcrux/: __init__.py  base_feature.py  feature.py  feature_union.py  log.py  log_return.py  multiparam.py  ohlcv.py  rolling_linreg_slope.py  tp_sl_pnl.py  zscore.py
